--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
 			<footer>
 				<ul class="social-icons">
-					<li><a target="blank" href="https://github.com/OnkarKhetre"><i class="icon-github" style="color: white;"></i></a></li>
-					<li><a target="blank" href="https://www.codechef.com/users/onkar_9075"><i class="icon-code" style="color: white;"></i></a></li>
-					<li><a target="blank" href="https://www.linkedin.com/in/onkar-khetre-498121215/"><i class="icon-linkedin2" style="color: white;"></i></a></li>
+					<li><a target="blank" href="#"><i class="icon-github" style="color: white;"></i></a></li>
+					<li><a target="blank" href="#"><i class="icon-code" style="color: white;"></i></a></li>
+					<li><a target="blank" href="#"><i class="icon-linkedin2" style="color: white;"></i></a></li>
 				</ul>
 			</footer>
 			
